--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 				<div class="content span-7">
 					<h2 class="major">I <img src="images/projectt/heart2.png" alt="love" class="pulse"> working with
 						small businesses </h2>
-					<p style="color: rgb(0, 0, 0);">I specialize in creating sites for individuals and small businesses.
+					<p style="color: rgb(255, 255, 255); font-weight: bolder; ">I specialize in creating sites for
+						individuals and small businesses.
 						You
 						shouldn’t have to settle
 						for cheap
