--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			</section>
 
 			<!-- Panel (Spotlight) -->
-			<section class="panel spotlight large left" id="first" style="overflow: hidden;">
+			<section class="panel spotlight large left about" id="first" style="overflow: hidden;">
 				<div class="content span-7">
 					<h2 class="major">I <img src="images/projectt/heart2.png" alt="love" class="pulse"> working with
 						small businesses </h2>
